# microbots

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pages.yml  test.yml
azure-pipelines/: vss-extension.json
azure-pipelines/MicrobotsLogAnalyzerTask/: index.js  log_analyzer_runner.py  package-lock.json  package.json  task.json
azure-pipelines/MicrobotsLogAnalyzerTask/test/: index.test.js
docs/: api-reference-guide.md  authentication.md  azure-pipelines-log-analyzer.md  copilot-bot.md  index.md
docs/advanced/: azure-managed-identity-setup.md  azure-pipelines-log-analyzer.md  technical-writing-guidelines.md
docs/advanced/developer-contribution-guidance/: docstring-and-writing-guidelines.md  index.md  pre-commit-setup.md
docs/advanced/getting-started/: introduction.md
docs/api-docs/: overview.md
docs/api-docs/bots/: index.md  log-analysis-bot.md
docs/api-docs/components/: bot.md  index.md
docs/api-reference/microbots/: MicroBot.md  constants.md  index.md
docs/blog/: index.md  microbots-customizability.md  rbac-authentication.md
docs/examples/azure-pipelines/: microbots-log-analyzer.yml
docs/examples/microbots_introduction/: log_analysis_bot.py  log_analysis_logger_debug.txt  log_analysis_logger_info.txt
docs/getting-started/: conclusion.md  installation-guide.md  microbots-execution-flow.md  microbots-logging.md  prerequisites.md  project-setup-and-installation.md
docs/guides/: azure-managed-identity-setup.md  index.md  introduction.md  rbac-authentication.md  technical-writing-guidelines.md
docs/javascripts/: doc-anchors.js
docs/stylesheets/: extra.css
scripts/: docstring_coverage.py
src/microbots/: MicroBot.py  constants.py
test/auto_memory/: test_analyzer.py  test_callbacks.py  test_cli.py  test_config.py  test_context.py  test_memory.py  test_models.py  test_orchestrator.py  test_workspace.py
test/bot/: test_browsing_bot.py  test_copilot_bot.py  test_log_analysis_bot.py  test_memory_tool_integration.py  test_microbot.py  test_reading_bot.py  test_writing_bot.py
test/llm/: test_azure_openai_api.py  test_openai_api.py
(+71 files in other folders)
