[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "microbots"
dynamic = ["version", "dependencies"]
description = "container-based autonomous agent framework"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["agent", "bot", "micro"]
authors = [
    { name = "xxx", email = "xxx@example.com" }
]
classifiers = [
  "Operating System :: OS Independent",
  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"

[project.optional-dependencies]
ghcp = ["github-copilot-sdk==0.3.0"]
azure_ad = ["azure-identity>=1.15.0"]
dev = ["pre-commit>=3.7", "numpydoc>=1.8"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
# This tells setuptools-scm to get version from git tags

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Source Repo" = "https://github.com/microsoft/microbots"
Issues = "https://github.com/microsoft/microbots/issues"

[tool.numpydoc_validation]
# Validates NumPy-style docstrings as described in docs/api-reference-guide.md.
# Start with "all" checks enabled, then deselect the noisy/optional ones so the
# gate focuses on correctness (sections present, params match the signature).
checks = [
    "all",   # report everything ...
    "ES01",  # ... except: no extended summary required
    "EX01",  # no examples section required
    "SA01",  # no "See Also" section required
    "SS06",  # allow multi-line summaries
    "GL01",  # allow summary on the first docstring line
    "GL02",  # allow closing quotes on the same line as text
    "GL03",  # allow flexible blank-line usage
]
# Symbols whose names match these regexes are skipped entirely.
exclude = [
    '\.__repr__$',
    '\.__str__$',
    '\.__eq__$',
    '\.__hash__$',
    '\.__len__$',
]